--- a/anyangle/anya/README
+++ b/anyangle/anya/README
@@ -5,14 +5,27 @@ About
 
 This file describes how to configure and run an implementation of the Anya 
 pathfinding algorithm. The program is written in Java by Daniel Harabor and 
-Dindar Oz. It is provided in the interest of scientific research under 
-the terms of the GNU GPL V2 and without any guarantees.
+Dindar Oz. It is provided in the interest of scientific research under the
+terms of the MIT License and without any guarantees.
 
 If you find this code useful, please cite our paper:
 
-D. Harabor, A. Grastien, D. Oz and V. Aksakalli, 2016
-Optimal Any-angle Pathfinding in Practice, In
-Journal of Artificial Intelligence Research (JAIR)
+@article{DBLP:journals/jair/HaraborGOA16,
+  author    = {Daniel Damir Harabor and
+               Alban Grastien and
+               Dindar {\"{O}}z and
+               Vural Aksakalli},
+  title     = {Optimal Any-Angle Pathfinding In Practice},
+  journal   = {J. Artif. Intell. Res.},
+  volume    = {56},
+  pages     = {89--118},
+  year      = {2016},
+  url       = {https://doi.org/10.1613/jair.5007},
+  doi       = {10.1613/jair.5007},
+  timestamp = {Sun, 02 Jun 2019 21:09:40 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/jair/HaraborGOA16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 ------------------------------------------------------------------------------
 Compilation pre-requisites: 
